Bug 361503 - Spam filter (spamassasin) does not work
Summary: Spam filter (spamassasin) does not work
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: misc (other bugs)
Version First Reported In: 5.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-07 17:17 UTC by Stefan
Modified: 2016-04-08 05:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan 2016-04-07 17:17:39 UTC
Since several months spamassasin did not work at my computer.
Versions:
SpamAssassin version 3.4.1
  running on Perl version 5.18.2
kmail2 5.1.3

No spam was moved from "Posteingang" to "Trash"
Yesterday I found the bug!
The spam filter were not installed properly.

First filter "Spamassasin Check" worked well.
The second filter, which moves spam to trash and marks it as "read" did not.
The filter rule was "X-Spam-Flag" matches regular expression "(yes)|(YES)"
But spamassasin does not create a line "X-Spam-Flag". In teh current version it creates a line "X-Spam-Level".
So I added a second rule to that filter:
"X-Spam-Level" contains "**"

Works! 

Reproducible: Always
Comment 1 Laurent Montel 2016-04-08 05:29:43 UTC
Oh ! I will investigate it
Comment 2 Laurent Montel 2016-04-08 05:38:06 UTC
We can't compare at 'X-Spam-Level' as it puts "*" number as level
Better to use "X-Spam-Status: Yes" as header
Comment 3 Laurent Montel 2016-04-08 05:42:30 UTC
Git commit 6588d8ed393f0038773537e0ce5fd0f81e41b781 by Montel Laurent.
Committed on 08/04/2016 at 05:41.
Pushed by mlaurent into branch 'Applications/16.04'.

Fix Bug 361503 - Spam filter (spamassasin) does not work

FIXED-IN: 5.2.0

M  +1    -1    kmail/plugins/common/antispamwizard.cpp
M  +1    -1    kmail/plugins/common/antispamwizard.h

http://commits.kde.org/kdepim-addons/6588d8ed393f0038773537e0ce5fd0f81e41b781