Fix Bug 361503 - Spam filter (spamassasin) does not work

FIXED-IN: 5.2.0
BUG: 361503